[BUGFIX] Prevent collapsing parent on LTS when dragging children
On TYPO3 7.6 LTS the parent would collapse itself to a
max height and overflow set to hidden, causing drop
zones to become un-targetable if they appear below
the fold. The patch removes the collapsing.

--- a/Resources/Public/css/grid.css
+++ b/Resources/Public/css/grid.css
@@ -28,3 +28,6 @@
 .flux-grid-column:last-child > .t3-grid-cell {
 	margin-right: 10px;
 }
+.t3-is-dragged .t3-page-ce-body {
+	max-height: none;
+}
